--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+html,body{
     background-image:  url('imagens/fundo.png'),linear-gradient(-35deg, #000152,#191DFF);   
     background-repeat: no-repeat;
         
