--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
+body{
     background-image:  url('imagens/fundo.png'),linear-gradient(-35deg, #000152,#191DFF);   
     background-repeat: no-repeat;
-    height:100%;    
+        
 }
 
     article#foto{
