--- a/style.css
+++ b/style.css
@@ -6,105 +6,117 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-image:  url('imagens/fundo.png'),linear-gradient(-35deg, #000152,#191DFF);   
+body,html{
+    background-color: black;
+   
+}
+/*==============foto e Diego Nunes==========*/
+#container-box1{
+    background-image: url('./imagens/fundoTec.png');
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-        
+    
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
+}
+#box{
+    /*border: 1px #c02020 solid;*/
+    margin: auto auto auto auto;
+    display: inline-flex;
+    height: auto;
+    max-width: 900px;
+}
+#desc_prof{
+    height: 90px;
+    font-family: 'Roboto',sans-serif;
+    margin:  3vw 0 auto auto;
+    padding-top: 32px ;
+}
+#desc_prof h2{
+    border-top: clamp(1px, 2px, 4px) #DEcc0B dashed ;
+    font-size:clamp(12px, 2.2vw, 36px);
+    color:#DEcc0B;    
+}
+#desc_prof h1,p{
+    color: #fff;;
+    font-size:clamp(8px, 1.5vw, 28px);
 }
 
-    article#foto{
-        text-align: center;
-        margin: auto;
-    }
-    article#foto img{
-        width: 20%;
-        max-width:250px;
-        min-width: 200px;
-        margin-top: 2vw;
-        
-    }
+#desc_prof h1,h2,p{
+    text-align: right;
+    margin-bottom: 5px;
+    
 
-    article#cabecalho{
-        text-align: center;
-        max-width: 500px;
-        margin: 0 auto;
-        width: 60%;
-    }
-    article#cabecalho h1,
-    article#cabecalho h2,
-    article#cabecalho p{
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        text-transform: uppercase;
-        
-    }
-    article#cabecalho h1{
-        font-size:clamp(1em, 3vw, 3ex) ;
-        color:#fff;
-        
-    }
-    article#cabecalho h2{
-        border-top:2px dashed #decc0b;
-        font-size:clamp(1.5em, 3.5vw, 4ex) ;
-        color:#decc0b;
-    }
-    article#cabecalho p{
-        font-size:clamp(0.8em, 2vw, 2ex) ;
-        color:#fff;
-        
-    }
-    article#redeSocial{
-        width: 18vw;
-        min-width:100px; 
-        margin:auto;
-    }
-    article#redeSocial img{
-        text-align: center;
-        display: inline-flex;
-        width:1.5vw;
-        min-width: 30px;
-        margin: 35px 15px 0px;
-    }
+}#desc_foto{
+    width: 29%;
+    max-width: 250px;  
+    min-width: 80px;
+    margin: 3vw auto auto 15px;
+}
+#desc_foto img{
+    width:100%;
+}
+/*============== redes sociais ==========*/
+#redesocial{
+    /*border: 1px #c02020 solid;*/
+    text-align: center;
+    
+    margin:50px auto ;
+    
+}
 
-    /*====================PROJETOS=============*/
-    article #git ,
-    article #formacao{
-        margin: 20px 0;
-        height: 50px;
-        
-    }
-
-    article #git p,
-    article #formacao p{
-        display: inline-flex;
-        text-align: center;
-        color:rgb(0, 175, 239);
-        font-size:clamp(15px, 1.5vw, 2ex);
-            
-    }
-article #git a,
-article #formacao a{
+#rede_insta img, #rede_linke img,#rede_zap img{
+    /*border: 1px #44d420 solid;*/
+    text-align: center;
+    margin: 2vw 30px;
+    height: 3vw;
+    max-height: 45px;
+    min-height: 10px;
+    
+}
+#rede_insta a, #rede_linke a,#rede_zap a{
     text-decoration: none;
 }
-article #git img,
-article#formacao img{
-    min-width: 25px;
-    width: 2vw;   
-}
 
+#rede_insta, #rede_linke,#rede_zap:hover{
+    cursor: pointer;
+}
+div#carouselExampleAutoplaying{
+    width: 100%; 
+    margin: 0 auto 20px auto; 
+    /*top:-150px;*/
+}
+/*============nome Projeto =================*/
+#projeto{
+    clear: both; 
+    display: inline-flex;
+    width:100%;  
+}
+#projeto img{
+    margin: auto; 
+    display: inline-flex;
+    width:15vw;  max-width: 250px; min-width: 100px;
+}
 /*===========================GRADUAÇÃO=============*/
+
 #cursos-grid{
     background-color: #fff;
-    width: 80%;
-    margin: 0 auto;
+    width: 70%;
+    margin: 0 auto 50px auto;
     padding: 20px 0;
+    border-radius:7px;
     
+}
+#cursos-grid h1{
+    font-size:clamp(6px, 1.7vw, 28px);
+
 }
 #cursos-grid a{
     text-decoration: none;
     color: #333;
     text-transform:uppercase;
-    font-size: 1.8ex;
 
 }
 article#cursos-online img,
@@ -114,242 +126,24 @@ article#formacaocursos img{
 
 }
 article#formacaocursos img{
-    width: 250px;
+    width: 25%;
+    min-width: 150px;
 }
 article#formacaocursos,
 article#cursos-online{
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 2ex;
+    
     color:#727272;
     margin: 0 0 2vw 0
 }
 article#cursos-online img{
-   height: 80px;
+   height: clamp(50px, 5vw, 3000px);
+   min-height: 20px;
 }
 article#cursos-online p{
-    font-size: 2.2ex;
+    font-size:clamp(6px, 1.5vw, 28px);
     background-color: #ddd;
-    
-}
-/*======================================SOBRE MIM===================*/
-article#sobremim{
-    background: #000160;
-    padding: 15px ;
-    border-radius:3%;
-    box-shadow:0 0 15px #333;
-    width: 60%;
-    min-width: 280px;
-    margin:  auto;
-    display: none;
-    height: 0;
-}
-article#sobremim h1,
-article#sobremim h2,
-article#sobremim p{
-    
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-    display:none;
-    
-}
-article#sobremim h1{
-    text-align: right;
-    color:#fff;
-    font-size:clamp(18px, 1vw, 2vw) ;
-    margin-bottom:5px;
-}
-article#sobremim h2{
-    border-top:2px dashed #decc0b;
-    width: 100%;
-    color:#decc0b;
-    font-size:clamp(24px, 40px, 2vw) ;
-    text-align: right;    
-}
-article#sobremim p{
-    font-size:clamp(15px, 2vw, 18px) ;
-    color:rgb(0, 175, 239);
-    text-align: justify;
-    margin-top:  clamp(15px, 2vw, 2vw);
-}
-
-#botSM{
-    background:#000152;
-    font-family: 'Roboto', sans-serif;
-    width:75%;
-    max-width:350px;
-    height:30px;	
-    padding:7px;
-    text-align:center;
-    margin:10px auto;
-    border-radius:5px;
-    color:#191DFF;
-	transition:5s;
-}
-#botSM:hover{
-    cursor:pointer;
-}
-#fec:hover{
-    cursor:pointer;
-}
-#fec{
-    width: 20px;
-    color: #fff;
-    font-family: 'Roboto',sans-serif;
-}
-
-/*==================================PROJETOS==================*/
-#ext-pro{
-    font-family: 'Roboto',sans-serif;
-    background: #ebebfa;
-    background-image: url('imagens/fundo-projetos.png');
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: 0 100% ;
-    
-        
-}
-
-article#menu-lateral{
-    position: absolute;   
-    background-color: #0052ff;
-    width: 30px;
-    height: auto;    
-    top:0;
-    bottom: 0;
-}
-
-article#menu-lateral:hover{
-    width: 120px;
-    transition: 1s;
-    border-radius: 0;
-    position: absolute;    
-    background-color: #0052ff;
-    height: auto;
-    top: 0px;
-    left: 0;
-    bottom: 0;
-    padding: 10px;
-    box-shadow: 2px 0 5px #3333339d ;
-}
-
-section#projetos{
-    
-    
-    text-align: center;
-    margin: 2vw auto;
-    
-    
-}
-section#projetos span{
-    width:350px;
-    height:150px;
-    display:inline-flex;
-    margin:20px 10px 0 10px;
-    border-radius:2px;
-    padding:4px 2px;
-    
-    
-    
-}
-section#projetos span#pro1{
-    background-image: url('imagens/logo_manos-pequ.png');
-    background-repeat: no-repeat;
-    background-size: 70% auto ;
-    background-position: 50% 5px;
-}
-section#projetos span#pro2{
-    background-image: url('imagens/corte-liga-med.png');
-    background-repeat: no-repeat;
-    background-size: 50% auto ;
-    background-position: 50% 5px;
-}
-div#janel{
-    width: 500px;
-}
-section#projetos span p.ace{        
-   
-    margin: auto 2px 0 ;
-    width: 50%;
-    height: 30px;
-    background-color: #33cc33;
-    text-align: center;
-    padding: 5px;
-    
-}
-section#projetos span p.ace a,
-section#projetos span p.info a{
-    text-decoration: none;
-    color: #0a0101;
-}
-section#projetos span p.info{        
-    position: relative;
-    margin: auto 2px 0 ;
-    width: 50%;
-    height: 30px;
-    background-color: #001657;
-    text-align: center;
-    padding: 5px;
-    color:#ccccff
-    
-}
-#projetos span img{
-    width: 20px;
-    height: 20px;
-    margin: auto;
-   
-}
-#projetos span p:hover{
-    cursor: pointer;
-    
-}
-#projetos span:hover p{
-    opacity: 1;    
-    transition: 1s;
-}
-header#cabe-pro{
-    width: 100;
-    text-align: center;
-    background-color: #4461c0;
-    box-shadow: 0 2px 5px #3333339d ;
-    color: #fff;
-    padding: 10px;
-}  
-.ico-redeSocial{
-    width: 20%;
-    bottom: 2px;
-    margin: 5px;
-    min-width: 30px;
-}  
-div{   
-   
-   margin:  0 auto 8%;
-   width: 35%;
-   max-width: 150px;
    text-align: center;
-       
-}  
-footer img.fundo-pro{
-    width: 80%;
-    right: 0;
-    position: absolute;
-    
-}
-footer {
-    width: 100%;
-    text-align: center;
-}
-footer  a{
-    text-decoration: none;
-}
-footer p{
-    color: #0052ff;
-    text-transform: uppercase;   
-    background: #000152;
-    padding: 5px;
-    width: 80px;
-    margin: auto;
-    font-size: 1.5ex;
-    margin-bottom: 120px;
-    
+   color:#727272
 }
